--- a/wicket-foundation-samples/pom.xml
+++ b/wicket-foundation-samples/pom.xml
@@ -119,7 +119,16 @@
 					<wtpversion>${wtp.version}</wtpversion>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>                
 		</plugins>
+        
 	</build>
 
 	<repositories>
