--- a/wicket-foundation-core/pom.xml
+++ b/wicket-foundation-core/pom.xml
@@ -18,6 +18,13 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
+
+    <developers>
+        <developer>
+            <name>Ilkka Seppälä</name>
+            <url>https://github.com/iluwatar</url>
+        </developer>
+    </developers>    
     
     <dependencies>
         <dependency>
