--- a/wicket-foundation-core/pom.xml
+++ b/wicket-foundation-core/pom.xml
@@ -25,6 +25,12 @@
             <url>https://github.com/iluwatar</url>
         </developer>
     </developers>    
+
+    <scm>
+        <connection>scm:git:https://github.com/iluwatar/wicket-foundation.git</connection>
+        <developerConnection>scm:git:https://github.com/iluwatar/wicket-foundation.git</developerConnection>
+        <url>https://github.com/iluwatar/wicket-foundation</url>
+    </scm>
     
     <dependencies>
         <dependency>
