--- a/wicket-foundation-samples/pom.xml
+++ b/wicket-foundation-samples/pom.xml
@@ -27,6 +27,12 @@
         </developer>
     </developers>    
 
+    <scm>
+        <connection>scm:git:https://github.com/iluwatar/wicket-foundation.git</connection>
+        <developerConnection>scm:git:https://github.com/iluwatar/wicket-foundation.git</developerConnection>
+        <url>https://github.com/iluwatar/wicket-foundation</url>
+    </scm>
+
     <properties>
         <jetty9.version>9.1.5.v20140505</jetty9.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
