Changed parent project artifact id.

--- a/wicket-foundation-core/pom.xml
+++ b/wicket-foundation-core/pom.xml
@@ -6,8 +6,9 @@
     
     <parent>
         <groupId>com.iluwatar</groupId>
-        <artifactId>wicket-foundation</artifactId>
+        <artifactId>wicket-foundation-parent</artifactId>
         <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     
     <artifactId>wicket-foundation-core</artifactId>
