--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.iluwatar</groupId>
-    <artifactId>wicket-foundation</artifactId>
+    <artifactId>wicket-foundation-parent</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
