--- a/wicket-foundation-samples/pom.xml
+++ b/wicket-foundation-samples/pom.xml
@@ -5,9 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>wicket-foundation</artifactId>
+        <artifactId>wicket-foundation-parent</artifactId>
         <groupId>com.iluwatar</groupId>
         <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>wicket-foundation-samples</artifactId>
