--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>wicket-foundation-parent</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
+    <name>Wicket Foundation Parent</name>
+    <description>Integration for Apache Wicket and Zurb Foundation.</description>
+    <url>https://github.com/iluwatar/wicket-foundation</url>
 
     <licenses>
         <license>
@@ -166,6 +169,17 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.3</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
                 </plugin>                
             </plugins>
         </pluginManagement>
@@ -255,6 +269,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
