--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <servlet.version>3.0.1</servlet.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wtp.version>none</wtp.version>
+        <servlet-api.version>2.5</servlet-api.version>
     </properties>
 
     <build>
@@ -247,6 +248,12 @@
                 <version>${jetty9.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
+                <scope>test</scope>
+            </dependency>            
         </dependencies>
     </dependencyManagement>
     
